fix(products): enhanced sections with aligning layout with global container and design system

--- a/frontend/src/sections/products/FeaturedProduct/FeaturedProduct.module.css
+++ b/frontend/src/sections/products/FeaturedProduct/FeaturedProduct.module.css
@@ -14,6 +14,7 @@
 
 .card h4 {
   margin-bottom: 6px;
+  color: white;
 }
 
 .card p {
